Made a better header

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <!-- This is a comment -->
     <header>
       <img src="http://lorempixel.com/600/400/cats/6" alt="headshot">
-      <h1>Amazing Title Here</h1>
+      <h1>Valerie Janos</h1>
     </header>
     <div class="main-content">
       <div>
