Added pic of louis

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         </div>
         <div class="project ">
           <h2>Project 2</h2>
-          <img src="http://lorempixel.com/400/400/cats/3" alt="">
+          <img src="https://scontent-sjc2-1.xx.fbcdn.net/v/t1.0-9/13886365_10153640126246594_4628080659534871199_n.jpg?oh=6f1195be01c32693063e40a7926c4c73&oe=58F7326A" alt="">
           <p>Blue bottle pinterest williamsburg, lo-fi scenester trust fund twee. Brooklyn chia copper mug banjo vape craft beer kickstarter celiac letterpress try-hard tacos. IPhone meggings put a bird on it ennui flannel. Man bun man braid kogi, trust fund mixtape synth typewriter affogato VHS. Edison bulb cronut VHS, typewriter disrupt mlkshk occupy chicharrones vaporware artisan deep v hot chicken gentrify. Poke mixtape pabst chicharrones jianbing photo booth enamel pin, shoreditch succulents. Subway tile blog chambray, seitan helvetica prism flexitarian mumblecore fanny pack offal viral distillery.</p>
         </div>
         <div class="project ">
