--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       </div>
       <div>
         <h2>About me</h2>
-        <p>9Hi my name is Val and I am bad at coding. lumbersexual paleo kinfolk gastropub tofu. Af fap chia cardigan semiotics synth, health goth post-ironic. Tacos mustache lumbersexual, butcher everyday carry gochujang hashtag godard yuccie sartorial austin wayfarers brunch mixtape.</p>
+        <p>Hi my name is Val and I am bad at coding. lumbersexual paleo kinfolk gastropub tofu. Af fap chia cardigan semiotics synth, health goth post-ironic. Tacos mustache lumbersexual, butcher everyday carry gochujang hashtag godard yuccie sartorial austin wayfarers brunch mixtape.</p>
         <p>Narwhal cliche actually woke, chicharrones glossier cray next level mumblecore asymmetrical synth. Prism tote bag next level quinoa, pabst tilde fam blue bottle ethical. Listicle drinking vinegar affogato, actually flannel raw denim shoreditch iceland twee stumptown DIY sustainable art party. Pickled marfa bespoke VHS, schlitz etsy poutine street art jianbing hella. Leggings sriracha tattooed biodiesel wolf. Fingerstache polaroid pinterest ramps. Affogato pug small batch chicharrones ethical.</p>
       </div>
       <div id="projects" class="clearfix">
